--- a/pom.xml
+++ b/pom.xml
@@ -437,6 +437,43 @@
             </resource>
         </resources>
         <plugins>
+
+            <!-- START OF CELERIO RELATED -->
+            <plugin>
+                <!-- http://mojo.codehaus.org/build-helper-maven-plugin/ -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.10</version>
+                <executions>
+                    <execution>
+                        <id>Adding generated java folder to build</id>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/main/java</source>
+                                <source>src/main/generated-java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>Adding generated java test location to test build</id>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/test/java</source>
+                                <source>src/test/generated-java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- END OF CELERIO RELATED -->
+
+
             <plugin>
                 <groupId>com.github.ekryd.sortpom</groupId>
                 <artifactId>sortpom-maven-plugin</artifactId>
@@ -473,6 +510,7 @@
                     <simulationClass>*</simulationClass>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-eclipse-plugin</artifactId>
@@ -556,6 +594,7 @@
                 <artifactId>maven-processor-plugin</artifactId>
                 <version>2.2.4</version>
                 <configuration>
+                    <addCompileSourceRoots>true</addCompileSourceRoots><!-- REQUIRED in order to include CELERIO generated-java -->
                     <defaultOutputDirectory>
                         ${project.build.directory}/generated-sources
                     </defaultOutputDirectory>
