--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,9 @@
 
         <!-- h2 jdbc settings -->
         <jdbc.driver>org.h2.Driver</jdbc.driver>
-        <jdbc.url>jdbc:h2:~/.h2/${database.name};MVCC=TRUE;FILE_LOCK=NO</jdbc.url>
-        <jdbc.user>${database.user}</jdbc.user>
-        <jdbc.password>${database.password}</jdbc.password>
+        <jdbc.url>jdbc:h2:file:./target/h2db/db/jhipavril</jdbc.url>
+        <jdbc.user>jhipavril</jdbc.user>
+        <jdbc.password></jdbc.password>
         <jdbc.catalog></jdbc.catalog>
         <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
         <sql-maven-plugin.delimiter>;</sql-maven-plugin.delimiter>
@@ -667,7 +667,7 @@
                     <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
                     -->
                     <arguments>
-                        <argument>--spring.profiles.active=dev</argument>
+                        <argument>--spring.profiles.active=dev,no-liquibase</argument>
                     </arguments>
                 </configuration>
             </plugin>
